--- a/start.html
+++ b/start.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BRU Passenger Profiler Survey</title>
+  <title>CPH - PAXonRoutes</title>
   <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
 <style>
@@ -37,13 +37,13 @@
       console.log("start_new_interview");
       window.localStorage.clear();
 
-      let url = "https://silverliningresearch.github.io/BRU_PS/survey.html";
+      let url = "https://silverliningresearch.github.io/CPH_Route/survey.html";
       window.location.href = url;
     }
 
     function resume_curent_interview() {
       console.log("resume_curent_interview");
-      let url = "https://silverliningresearch.github.io/BRU_PS/survey.html";
+      let url = "https://silverliningresearch.github.io/CPH_Route/survey.html";
       window.location.href = url;
     }
 
@@ -70,12 +70,8 @@
   </h2>
   <h3>
 
-    <a href="https://silverliningresearch.github.io/BRU_PS/DailyPlan.html" target="_blank">
-      Daily Plan - BRU Passenger Profiler
-    </a>
-    </br> </br>
-    <a href="https://silverliningresearch.github.io/BRU_PS/TodayReport.html" target="_blank">
-      Today status - BRU Passenger Profiler
+    <a href="https://silverliningresearch.github.io/CPH_Route/DailyPlan.html" target="_blank">
+      Daily Plan - PAXonRoutes
     </a>
   </h3>
 
