--- a/QuotaReport.html
+++ b/QuotaReport.html
@@ -1,16 +1,16 @@
 <html>
   <head>
-		<title>BRU Quota report</title>
+		<title> CPH PAXonRoutes - Quota report</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     
 		<script src="data/Quota_Data.js"></script>
     <script src="data/invalid_cases.js"></script>
+
     <script src="scripts/PrepareData.js"></script>
     <script src="scripts/CalculateData.js"></script>
 		
     <script type="text/javascript" src="https://silverliningresearch.github.io/daily_plan_data_sur/BRU_PROF/data/interview_data.js"></script> 
-    <script type="text/javascript" src="https://silverliningresearch.github.io/daily_plan_data_sur/BRU_PROF/data/BRU_flight_list_daily.js"></script> 
-
+    
     <style>
       .table-font {
         font-size: 16px;
@@ -104,7 +104,7 @@
     </script>
   </head>
   <body>
-		<h1>Quota Report - BRU PS Survey</h1>
+		<h1>Quota Report - CPH PAXonRoutes</h1>
     <h4 id="overall_status"></h4>
     <h4 id="download_time"></h4>
     <div id="dashboard_div">
