--- a/restart.html
+++ b/restart.html
@@ -6,7 +6,7 @@
   <script>
     console.log("restart interview");
     localStorage.clear();
-    let url = "https://silverliningresearch.github.io/BRU_PS/survey";
+    let url = "https://silverliningresearch.github.io/CPH_Route/survey";
     window.location.href = url;
 </script>
 
