update new files

--- a/survey.html
+++ b/survey.html
@@ -76,7 +76,7 @@
               hide_city_search_box();
             }
 
-            if (api.fn.getCurrentPageIndex() ===16) { //2023.04.26: 59
+            if (api.fn.getCurrentPageIndex() ===19) { 
               show_postal_code_search_box();
             } else {
               hide_postal_code_search_box();
