--- a/DailyPlan.html
+++ b/DailyPlan.html
@@ -3,13 +3,14 @@
 		<title>Daily Plan – CPH PAXonRoutes</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     
-		<script src="data/Quota_Data.js"></script>
+		<script src="data/quota_data.js"></script>
     <script src="data/invalid_cases.js"></script>
+    <script src="data/flight_list.js"></script>
 
     <script src="scripts/PrepareData.js"></script>
 		<script src="scripts/CalculateData.js"></script>
 		
-    <script type="text/javascript" src="https://silverliningresearch.github.io/daily_plan_data_sur/BRU_PROF/data/interview_data.js"></script> 
+    <script type="text/javascript" src="https://silverliningresearch.github.io/daily_plan_data_sur/CPH_Route/data/interview_data.js"></script> 
 
     <style>
       .table-font {
@@ -35,14 +36,11 @@
         var data = new google.visualization.DataTable();
 
         //define header
-        data.addColumn('string', 'Date Time');
+        //data.addColumn('string', 'Date-Time');
         //data.addColumn('string', 'Date');
-        //data.addColumn('string', 'Time');
+        data.addColumn('string', 'Time');
         data.addColumn('string', 'Flight');
         data.addColumn('string', 'To');
-        data.addColumn('string', 'Via');
-        data.addColumn('string', 'Gate Zone');
-        data.addColumn('string', 'Gate Number');
         data.addColumn('string', 'DOOP');
         data.addColumn('number', 'Remaining Flights');
         data.addColumn('number', 'Quota');
@@ -56,9 +54,10 @@
         for (i = 0; i < daily_plan_data.length; i++) {
           var row = daily_plan_data[i];
           data.addRows([[
-              row.Date_Time, 
-              //row.Date, row.Time,
-              row.Flight, row.Dest, row.Next, row.GateZone, row.GateNumber, row.doop, 
+              //row.Date_Time, 
+              row.Time, 
+              row.Flight, row.Dest,
+              row.doop, 
               Number(row.remaining_flights), Number(row.Quota), Number(row.Completed), Number(row.Difference), 
               Number(row.Completed_percent), 
               Number(row.Prioritisation_score), 
@@ -87,10 +86,10 @@
         var options = {
           //'allowHtml': true, 
           //'cssClassNames': {font: 'large' },
-          'filterColumnLabel': 'Gate Zone',
+          'filterColumnLabel': 'To',
           "ui": {"label": "", 
                 "labelStacking": 'horizotal',
-                "caption": "Select Gate Zone",
+                "caption": "Select Destination",
                 }
         };
         
@@ -116,7 +115,7 @@
 
         var view = new google.visualization.DataView(data);
         view.hideColumns([priority_col, priority_col-1]); //unncessary columns: Date_Tome & priority
-        //document.getElementById("filter_div").style.display = "none";
+        document.getElementById("filter_div").style.display = "none";
         dashboard.draw(view);
 
         //Update time info
