--- a/QuotaReport.html
+++ b/QuotaReport.html
@@ -3,14 +3,15 @@
 		<title> CPH PAXonRoutes - Quota report</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     
-		<script src="data/Quota_Data.js"></script>
+    <script src="data/quota_data.js"></script>
     <script src="data/invalid_cases.js"></script>
+    <script src="data/flight_list.js"></script>
 
     <script src="scripts/PrepareData.js"></script>
-    <script src="scripts/CalculateData.js"></script>
+		<script src="scripts/CalculateData.js"></script>
 		
-    <script type="text/javascript" src="https://silverliningresearch.github.io/daily_plan_data_sur/BRU_PROF/data/interview_data.js"></script> 
-    
+    <script type="text/javascript" src="https://silverliningresearch.github.io/daily_plan_data_sur/CPH_Route/data/interview_data.js"></script> 
+
     <style>
       .table-font {
         font-size: 16px;
@@ -29,7 +30,7 @@
         var data = new google.visualization.DataTable();
 
         //define header
-        data.addColumn('string', 'Flight - To');
+        data.addColumn('string', 'To Airport - By Airline');
         data.addColumn('string', 'Dest');
         data.addColumn('string', 'DOOP [Mon-Sun]');
         data.addColumn('number', 'Remaining Flights');
@@ -43,7 +44,7 @@
           var row = quota_data[i];
           data.addRows([
           [
-            row.Flight_To,
+            row.Airport_Airline,
             row.Dest, 
             row.doop,
             Number(row.remaining_flights),
@@ -89,7 +90,7 @@
         dashboard.bind(tableFilter, tableChart);
 
         var view = new google.visualization.DataView(data);
-        //document.getElementById("filter_div").style.display = "none";
+        document.getElementById("filter_div").style.display = "none";
         dashboard.draw(view);
 
         //Update time info
@@ -107,6 +108,17 @@
 		<h1>Quota Report - CPH PAXonRoutes</h1>
     <h4 id="overall_status"></h4>
     <h4 id="download_time"></h4>
+
+    <div class="year_month">
+      <label for="year_month">Data collection period:</label>
+      <select id="year_month" onchange="drawTable()">
+        <option value="current-month">current month
+        <option value="06-2023">06-2023
+        <option value="05-2023">05-2023
+        </select>
+    </div>
+    <br>
+
     <div id="dashboard_div">
       <!--Divs that will hold each control and chart-->
       <div id="filter_div"></div>
