update new files

--- a/QuotaReport.html
+++ b/QuotaReport.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-		<title> CPH PAXonRoutes - Quota report</title>
+		<title> Quota report - CPH PAXonRoutes</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     
     <script src="data/quota_data.js"></script>
