update new files

--- a/survey.html
+++ b/survey.html
@@ -33,7 +33,7 @@
 
   <body>
     <survalyzer-survey
-      surveyhash="csenyautei"
+      surveyhash="irnlqyzjqj"
       tenant="silverlining"
     ></survalyzer-survey>
 
