update new files

--- a/survey.html
+++ b/survey.html
@@ -41,6 +41,9 @@
     <script src="https://survalyzer.survalyzer.eu/assets/survalyzer-survey.js"></script>
 
     <script src="data/flight_list.js"></script>
+    <script src="data/arrival_airline.js"></script>
+    <script src="data/arrival_airport.js"></script>
+
     <script src="data/airport_list.js"></script>
     <script src="data/city_list.js"></script>
     <script src="data/postal_code_DK.js"></script>
