update new files

--- a/DailyPlan.html
+++ b/DailyPlan.html
@@ -37,7 +37,7 @@
 
         //define header
         //data.addColumn('string', 'Date-Time');
-        //data.addColumn('string', 'Date');
+        data.addColumn('string', 'Date');
         data.addColumn('string', 'Time');
         data.addColumn('string', 'Flight');
         data.addColumn('string', 'To');
@@ -49,12 +49,17 @@
         data.addColumn('number', 'Completed %');
         data.addColumn('number', 'Priority Score');
         data.addColumn('number', 'Priority');
-        
+
+        //sort ascending
+        daily_plan_data.sort(function(a, b) {
+          return (parseFloat(a.Date_Time) - parseFloat(b.Date_Time));
+        });
+
         //add data
         for (i = 0; i < daily_plan_data.length; i++) {
           var row = daily_plan_data[i];
           data.addRows([[
-              //row.Date_Time, 
+              row.Date, 
               row.Time, 
               row.Flight, row.Dest,
               row.doop, 
@@ -106,7 +111,7 @@
           'options': {
             'allowHtml': true, 
             'cssClassNames': {tableCell: 'table-font', headerRow: 'table-font', headerCell: 'googleHeaderCell' },
-            'sortColumn': 0, //time
+            //'sortColumn': 0, //time
             'showRowNumber': false, 'width': '100%', 'height': '100%'
           }
         });
