--- a/DailyPlan.html
+++ b/DailyPlan.html
@@ -26,6 +26,15 @@
 
 		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
+    function isNextDay()
+    {
+      const queryString = window.location.search;
+      const urlParams = new URLSearchParams(queryString);
+
+      //?nextday=true
+      console.log("urlParams.has('nextday'): ", urlParams.has('nextday'));
+      return(urlParams.has('nextday'));
+    }
 
       //google.charts.load('current', {'packages':['table']});
       google.charts.load('current', {'packages':['table','corechart', 'controls']});
