--- a/survey_old.html
+++ b/survey_old.html
@@ -8,15 +8,26 @@
 
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <link
       rel="stylesheet"
       href="https://survalyzereu.blob.core.windows.net/public/assets/font-awesome.css"
     />
-   
-    <link rel="stylesheet" type="text/css" href="https://files.survalyzer.eu/public/dependency/fontawesome-free/v5/css/all.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://files.survalyzer.eu/public/dependency/devextreme/latest/css/dx.light.css" />
-    <link rel="stylesheet" type="text/css" href="https://files.survalyzer.eu/public/dependency/styleguide/latest/assets/default/rt-theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://survalyzereu.blob.core.windows.net/public/assets/dx.common.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://survalyzereu.blob.core.windows.net/public/assets/dx.light.css"
+    />
+    <link
+      href="https://survalyzer.survalyzer.eu/assets/themes/default/rt-theme.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <link href="css/postal-code-search-box.css" rel ="stylesheet" type="text/css" />
   </head>
 
@@ -25,14 +36,9 @@
       surveyhash="irnlqyzjqj"
       tenant="silverlining"
     ></survalyzer-survey>
-
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-    <script src="https://files.survalyzer.eu/public/dependency/jquery/latest/jquery.min.js"></script>
-    <script src="https://files.survalyzer.eu/public/dependency/bootstrap/v4/js/bootstrap.bundle.min.js"></script>
-    <script src="https://files.survalyzer.eu/public/dependency/embedded/release/survalyzer-survey.js"></script>
-
-
+    <script src="https://survalyzer.survalyzer.eu/assets/survalyzer-survey.js"></script>
 
     <script src="data/flight_list.js"></script>
     <script src="data/arrival_airline.js"></script>
